fixed view of the services divs on mobile view

--- a/client/src/styles/marketing.sass
+++ b/client/src/styles/marketing.sass
@@ -127,11 +127,15 @@ main
 .services
     width: 100vw
     height: 100vh
+    @media #{$mobile}
+        width: 100%
     .service-one, .service-two
         width: 100vw
         height: 50vh
         display: flex
         color: white
+        @media #{$mobile}
+            height: 100vh
         div
             width: 50%
     .service-one
